--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <br/>
     <textarea id="data" style="width: 200px; height: 200px;"></textarea>
     <p>
-        Instructions: Put a list of 24 or 25 items in the text box above depending on if you want to use the free space. Then click the load items button.<br/>
+        Instructions: Put a list of at least 24 or 25 items (one per line) in the text box above depending on if you want to use the free space. Then click the load items button.<br/>
         If you shuffle you can share your layout text with someone else, just have them uncheck shuffle and paste the layout text in the layout box.<br>
     </p>
     <script>
