label pre-made lists

--- a/index.html
+++ b/index.html
@@ -41,13 +41,14 @@
     <label for="layout">Layout</label>
     <input id='layout' type="text">
     <br/>
+    <label for="premades">Pre-made lists:</label>
     <select id="premades" onchange="usePremade()">
         <option value="custom">Blank</option>
         <option value="eft">Escape from Tarkov</option>
         <option value="ow">Overwatch</option>
     </select>
     <br/>
-    <textarea id="data" style="width: 200px; height: 200px;"></textarea>
+    <textarea id="data" style="width: 400px; height: 200px;"></textarea>
     <p>
         Instructions: Put a list of at least 24 or 25 items (one per line) in the text box above depending on if you want to use the free space. Then click the load items button.<br/>
         If you shuffle you can share your layout text with someone else, just have them uncheck shuffle and paste the layout text in the layout box.<br>
