--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <option value="custom">Blank</option>
         <option value="eft">Escape from Tarkov</option>
         <option value="ow">Overwatch</option>
+        <option value="code">Code</option>
     </select>
     <br/>
     <textarea id="data" style="width: 400px; height: 200px;"></textarea>
@@ -108,6 +109,32 @@ Teammate counters you
 Xenophobia
 Bastion tactics fail spectacularly
 Bitching about medals/fire`;
+            }
+            if (v == 'code') {
+                text.innerHTML = `Zero comments in file
+Somebody has gone and re-implemented a language feature by hand
+Identifier naming convention used incorrectly
+Off by one
+Dead code
+Writing unit tests for code that wasn’t designed to be testable
+Unnecessary Boolean Algebra
+Unbelievably poor documentation
+Feature creep
+Conditional operator
+Code so bad you have to look up who wrote it
+“Humorous” variable names that are only funny to the author
+Code only works if you sleep long enough
+// this is a dirty hack and should be fixed
+Typing things repeatedly instead of iterating
+Mysterious commented out code
+Someone horribly mangled the Git repo
+Misleading indentation
+Multithreading gone wrong
+Magic numbers
+Spend more than 15 minutes turning on the projector
+Incorrect use of reference equality
+Blatantly incorrect comments
+Highly paid CS degree holder does not know how to computer`;
             }
             if (v == 'custom') {
                 text.innerHTML = "";
