add vrc premade

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <option value="eft">Escape from Tarkov</option>
         <option value="ow">Overwatch</option>
         <option value="code">Code</option>
+        <option value="vrc">VRChat</option>
     </select>
     <br/>
     <textarea id="data" style="width: 400px; height: 200px;"></textarea>
@@ -135,6 +136,32 @@ Spend more than 15 minutes turning on the projector
 Incorrect use of reference equality
 Blatantly incorrect comments
 Highly paid CS degree holder does not know how to computer`;
+            }
+            if (v == 'vrc') {
+                text.innerHTML = `Who the f*** is getting votekicked?
+Converse with a mute
+Someone walks through you
+VRC update broke my stuff
+Works on my machine
+Avatar show and tell
+Elitism
+Out of batteries
+Talk about politics
+Mirror dwellers
+Talk about drugs
+Unruly children
+Drama
+Mod usage tells
+Is that a gamer grill?
+Someone crashed
+Casually talking about VRC mods
+Gang activity
+Explaining the menus
+NSFW in public
+Talk about COVID
+Xenophobia
+IRL interactions leaking into VR
+Somebody's tragic backstory`;
             }
             if (v == 'custom') {
                 text.innerHTML = "";
