--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
 <head>
     <meta charset='utf-8'>
     <style>
+        html {
+            -ms-overflow-style: none;  /* IE, Edge */
+            scrollbar-width: none;  /* Firefox */
+        }
+        html::-webkit-scrollbar {
+            display: none; /* Chrome, Safari, Opera */
+        }
         body {
-            overflow: hidden;
+            
             margin: 0px;
             background-color: #2c2c2c;
             color: #ffffff;
