--- a/index.html
+++ b/index.html
@@ -163,30 +163,30 @@ Blatantly incorrect comments
 Highly paid CS degree holder does not know how to computer`;
             }
             if (v == 'vrc') {
-                text.innerHTML = `Who the f*** is getting votekicked?
+                text.innerHTML = `Who the fuck is getting votekicked?
 Converse with a mute
 Someone walks through you
-VRC update broke my stuff
-Works on my machine
-Avatar show and tell
+VRC update broke my shit
+Tech support minigame
+Avatar show-and-tell
 Elitism
-Out of batteries
 Talk about politics
-Mirror dwellers
-Talk about drugs
 Unruly children
 Drama
-Mod usage tells
-Is that a gamer grill?
 Someone crashed
-Casually talking about VRC mods
 Gang activity
 Explaining the menus
 NSFW in public
-Talk about COVID
+Talk about Covid
 Xenophobia
-IRL interactions leaking into VR
-Somebody's tragic backstory`;
+Somebody’s tragic backstory
+Bitching about EAC
+Get hit on
+Schedule 1 substance
+VOIP soundboard
+Old acquaintance
+Bullying
+actual nice interaction with a rando`;
             }
             if (v == 'custom') {
                 text.innerHTML = "";
