--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@ Highly paid CS degree holder does not know how to computer`;
                 text.innerHTML = `Who the fuck is getting votekicked?
 Converse with a mute
 Someone walks through you
-VRC update broke my shit
+VRC update broke my stuff
 Tech support minigame
-Avatar show-and-tell
+Avatar show and tell
 Elitism
 Talk about politics
 Unruly children
@@ -177,7 +177,7 @@ Someone crashed
 Gang activity
 Explaining the menus
 NSFW in public
-Talk about Covid
+Talk about COVID
 Xenophobia
 Somebody’s tragic backstory
 Bitching about EAC
