Censorship. This is a Christian Bingo app.

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ Blatantly incorrect comments
 Highly paid CS degree holder does not know how to computer`;
             }
             if (v == 'vrc') {
-                text.innerHTML = `Who the fuck is getting votekicked?
+                text.innerHTML = `Who the f*** is getting votekicked?
 Converse with a mute
 Someone walks through you
 VRC update broke my stuff
